create and get products php
